--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.24.6",
+    "axios": "^1.8.4",
     "bootstrap": "^5.2.1",
+    "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
+    "lint": "^0.8.19",
+    "mobx": "^6.13.7",
+    "mobx-react": "^9.2.0",
+    "prettier": "^3.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-hot-toast": "^2.4.1",
     "react-loading-skeleton": "^3.1.0",
+    "react-modal": "^3.16.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
